# CAST

./: .gitignore  README.md  pyproject.toml
examples/insecure-lab/: docker-compose.yml
scripts/: audit.sh
src/csat/: __init__.py  cli.py  detectors.py  models.py  reporting.py  scoring.py  trivy.py
tests/: test_detectors.py
