[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "container-security-audit-toolkit"
version = "0.1.0"
description = "Docker container security audit toolkit with CIS-aligned findings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Crypt" }
]
dependencies = [
  "docker>=7.1.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.scripts]
csaudit = "csat.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
